--- a/myblog/_config.yml
+++ b/myblog/_config.yml
@@ -3,12 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 张志强的博客
 subtitle:
 description:
 keywords:
-author: John Doe
-language:
+author: luckyqiang
+avatar: /images/avatar.jpg
+language: zh-Hans
 timezone:
 
 # URL
@@ -27,6 +28,20 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+
+#live2d
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  display:
+    position: right
+    width: 75
+    height: 150
+  mobile:
+    show: true
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -73,9 +88,11 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repository: git@github.com:luckyqiang123/luckyqiang123.github.io.git
+  branch: master
